--- a/src/style/global.css
+++ b/src/style/global.css
@@ -3,5 +3,10 @@
 @tailwind utilities;
 
 body {
-    font-family: 'Cairo', sans-serif;
+  font-family: 'Cairo', sans-serif;
+}
+
+input[type='number']::-webkit-inner-spin-button,
+input[type='number']::-webkit-outer-spin-button {
+  -webkit-appearance: none;
 }
